--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,18 +8,35 @@
   <title>战雷随机分房生成器</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <div class="tabs-container">
     <div class="tabs">
-      <div class="tab active">正常生成</div>
-      <div class="tab">不正常生成</div>
+      <div class="tab active">陆战</div>
+      <div class="tab">空战</div>
+      <div class="tab">海战</div>
+      <div class="tab">更高级的生成</div>
     </div>
     <div class="content-container">
       <div class="content active">
-        <h2>正常随机分房生成器（1.0-13.0）</h2>
-        <button onclick="generateRandomNumberNormal()">生成</button>
-        <p id="randomNumberNormal">BVVD飞马</p>
+        <h2>陆战随机分房生成器（1.0-12.3）</h2>
+        <button onclick="generateRandomNumberGround()">生成</button>
+        <p id="randomNumberGround">BVVD飞马</p>
         <img src="img/new.gif" />
+      </div>
+      <div class="content">
+        <h2>空战随机分房生成器（1.0-13.0）</h2>
+        <button onclick="generateRandomNumberAirCombat()">生成</button>
+        <p id="randomNumberAirCombat">BVVD飞马</p>
+        <img src="img/new.gif" />
+        </p>
+      </div>
+      <div class="content">
+        <h2>海战随机分房生成器（1.0-7.0）</h2>
+        <button onclick="generateRandomNumberSeaBattle()">生成</button>
+        <p id="randomNumberSeaBattle">BVVD飞马</p>
+        <img src="img/new.gif" />
+        </p>
       </div>
       <div class="content">
         <h2>不正常随机分房生成器（1.0-13.0，但7.0以上的几率更大）</h2>
@@ -28,6 +46,11 @@
         </p>
       </div>
     </div>
+  </div>
+  <div class="qwq">
+    <p>免责声明，本玩意仅供娱乐使用，对于您在抽选的分房内发生的包括但不限于：网 络 状 况 不 佳 ，炮闩击发失败，被BVVD吞弹药，出核弹被人扫下来了，本网站概不负责！</p>
+    <p><a href="https://github.com/xiaotian7196/War-Thunder-Random-rating-picker/" target="_blank"
+        rel="noopener noreferrer">Github Link</a></p>
   </div>
   <script src="js/main.js"></script>
   <script src="js/random.js"></script>
