--- a/huangli.html
+++ b/huangli.html
@@ -23,7 +23,6 @@
         }
 
         .column {
-            flex: 1;
             padding: 20px;
             box-sizing: border-box;
             display: flex;
@@ -32,15 +31,18 @@
         }
 
         .left {
+            width: 200px;
             background-color: #bc2f3f;
             color: white;
         }
 
         .center {
+            width: 400px;
             background-color: #fcf8ef;
         }
 
         .right {
+            width: 200px;
             background-color: #666666;
             color: white;
         }
@@ -49,9 +51,15 @@
 
 <body>
     <div class="container">
-        <div class="column left">宜</div>
-        <div class="column center">今天是2024年10月11日 星期五</div>
-        <div class="column right">不宜</div>
+        <div class="column left">
+            <h3>宜</h3>
+        </div>
+        <div class="column center">
+            <h3>今天是2024年10月11日 星期五</h3>
+        </div>
+        <div class="column right">
+            <h3>不宜</h3>
+        </div>
     </div>
 </body>
 
