--- a/huangli.html
+++ b/huangli.html
@@ -6,61 +6,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>战雷黄历求签</title>
-  <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-
-        .container {
-            display: flex;
-            width: 800px;
-            background-color: #fff;
-        }
-
-        .column {
-            padding: 20px;
-            box-sizing: border-box;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .left {
-            width: 200px;
-            background-color: #bc2f3f;
-            color: white;
-        }
-
-        .center {
-            width: 400px;
-            background-color: #fcf8ef;
-        }
-
-        .right {
-            width: 200px;
-            background-color: #666666;
-            color: white;
-        }
-    </style>
+  <link rel="stylesheet" href="css/huangli.css" />
 </head>
 
 <body>
     <div class="container">
         <div class="column left">
             <h3>宜</h3>
+            <div class="content-box">
+                <div class="content">炸战区</div>
+                <div class="description">details</div>
+            </div>
         </div>
         <div class="column center">
             <h3>今天是2024年10月11日 星期五</h3>
+            <h4>建议座位方向：西北</h4>
         </div>
         <div class="column right">
             <h3>不宜</h3>
+            <div class="content-box">
+                <div class="content">陆战历史</div>
+                <div class="description">details</div>
+            </div>
         </div>
     </div>
+    <script src="js/lunarContent.js"></script>
+    <script src="js/lunar.js"></script>
 </body>
 
 </html>
