--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
     </div>
   </div>
 
-  <script src="js/Jquery_2.21.js"></script>
   <script src="js/main.js"></script>
   <script src="js/random.js"></script>
   <script src="js/oldAlmanac.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.js" ></script>
 </body>
 
 </html>
