--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
 
     <div class="qwq">
       <p>免责声明，本玩意仅供娱乐使用，对于您在抽选的分房内发生的包括但不限于：网络状况不佳，炮闩击发失败，被BVVD吞弹药，出核弹被人扫下来了，本网站概不负责！</p>
-      <p><a href="https://github.com/xiaotian7196/War-Thunder-Random-rating-picker/" target="_blank" rel="noopener noreferrer">Github Link</a></p>
+      <p><a href="https://github.com/xiaotian7196/War-Thunder-Random-rating-picker/" target="_blank"
+          rel="noopener noreferrer"><img src="img/gitneko.png" width="2%" />Github Page</a> | <a
+          href="https://wt.xiaotianchen.com/index_en.html">English Page</a></p>
     </div>
   </div>
 
   <script src="js/main.js"></script>
   <script src="js/random.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.js"></script>
   <script src="js/oldAlmanac.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.js" ></script>
 </body>
 
 </html>
