--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
           <h2>陆战随机分房生成器（1.0-12.3）</h2>
           <button onclick="generateRandomNumberGround()">生成</button>
           <p id="randomNumberGround">BVVD飞马</p>
-          <img id="image" src="" alt="今天要玩什么系呢" style="width: 30%; height: auto;">
+          <img id="image" src="" alt="今天要玩什么系呢" style="width: 130px; height: auto; padding-bottom: 13px;">
           <br />
-          <button onclick="displayRandomImage()">换一个系</button>
+          <button onclick="displayRandomImageGround()">换一个系</button>
         </div>
         <div class="content">
           <h2>空战随机分房生成器（1.0-13.0）</h2>
           <button onclick="generateRandomNumberAirCombat()">生成</button>
           <p id="randomNumberAirCombat">BVVD飞马</p>
-          <img id="image1" src="" alt="今天要玩什么系呢" style="width: 30%; height: auto;">
+          <img id="image1" src="" alt="今天要玩什么系呢" style="width: 130px; height: auto; padding-bottom: 13px;">
           <br />
-          <button onclick="displayRandomImage()">换一个系</button>
+          <button onclick="displayRandomImageAirCombat()">换一个系</button>
         </div>
         <div class="content">
           <h2>海战随机分房生成器（1.0-7.0）</h2>
           <button onclick="generateRandomNumberSeaBattle()">生成</button>
           <p id="randomNumberSeaBattle">BVVD飞马</p>
-          <img id="image2" src="" alt="今天要玩什么系呢" style="width: 30%; height: auto;">
+          <img id="image2" src="" alt="今天要玩什么系呢" style="width: 130px; height: auto; padding-bottom: 13px;">
           <br />
-          <button onclick="displayRandomImage()">换一个系</button>
+          <button onclick="displayRandomImageSeaBattle()">换一个系</button>
         </div>
         <div class="content">
           <h2>不正常随机分房生成器（1.0-13.0，但7.0以上的几率更大）</h2>
           <button onclick="generateRandomNumberPlus()">生成</button>
           <p id="randomNumberplus">BVVD飞马</p>
-          <img id="image3" src="" alt="今天要玩什么系呢" style="width: 30%; height: auto;">
+          <img id="image3" src="" alt="今天要玩什么系呢" style="width: 130px; height: auto; padding-bottom: 13px;">
           <br />
-          <button onclick="displayRandomImage()">换一个系</button>
+          <button onclick="displayRandomImagePlus()">换一个系</button>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
     <div class="qwq">
       <p>免责声明，本玩意仅供娱乐使用，对于您在抽选的分房内发生的包括但不限于：网络状况不佳，炮闩击发失败，被BVVD吞弹药，出核弹被人扫下来了，本网站概不负责！</p>
       <p><a href="https://github.com/xiaotian7196/War-Thunder-Random-rating-picker/" target="_blank"
-          rel="noopener noreferrer"><img src="img/gitneko.png" width="2%" />Github Page</a> | <a
+          rel="noopener noreferrer"><img src="img/gitneko.png" width="14px" />&nbsp;Github Page</a> | <a
           href="https://wt.xiaotianchen.com/index_en.html">English Page</a></p>
     </div>
   </div>
