--- a/index_en.html
+++ b/index_en.html
@@ -23,33 +23,33 @@
           <h2>Ground Battle Random Room Generator (1.0-12.3)</h2>
           <button onclick="generateRandomNumberGround()">Generate</button>
           <p id="randomNumberGround">BVVD Pegasus</p>
-          <img id="image" src="" alt="What faction to play today?" style="width: 30%; height: auto;">
+          <img id="image" src="" alt="What faction to play today?" style="width: 130px; height: auto; padding-bottom: 13px;">
           <br />
-          <button onclick="displayRandomImage()">Change Faction</button>
+          <button onclick="displayRandomImageGround()">Change Faction</button>
         </div>
         <div class="content">
           <h2>Air Battle Random Room Generator (1.0-13.0)</h2>
           <button onclick="generateRandomNumberAirCombat()">Generate</button>
           <p id="randomNumberAirCombat">BVVD Pegasus</p>
-          <img id="image1" src="" alt="What faction to play today?" style="width: 30%; height: auto;">
+          <img id="image1" src="" alt="What faction to play today?" style="width: 130px; height: auto; padding-bottom: 13px;">
           <br />
-          <button onclick="displayRandomImage()">Change Faction</button>
+          <button onclick="displayRandomImageAirCombat()">Change Faction</button>
         </div>
         <div class="content">
           <h2>Naval Battle Random Room Generator (1.0-7.0)</h2>
           <button onclick="generateRandomNumberSeaBattle()">Generate</button>
           <p id="randomNumberSeaBattle">BVVD Pegasus</p>
-          <img id="image2" src="" alt="What faction to play today?" style="width: 30%; height: auto;">
+          <img id="image2" src="" alt="What faction to play today?" style="width: 130px; height: auto; padding-bottom: 13px;">
           <br />
-          <button onclick="displayRandomImage()">Change Faction</button>
+          <button onclick="displayRandomImageSeaBattle()">Change Faction</button>
         </div>
         <div class="content">
           <h2>Unconventional Random Room Generator (1.0-13.0, but higher chance for above 7.0)</h2>
           <button onclick="generateRandomNumberPlus()">Generate</button>
           <p id="randomNumberplus">BVVD Pegasus</p>
-          <img id="image3" src="" alt="What faction to play today?" style="width: 30%; height: auto;">
+          <img id="image3" src="" alt="What faction to play today?" style="width: 130px; height: auto; padding-bottom: 13px;">
           <br />
-          <button onclick="displayRandomImage()">Change Faction</button>
+          <button onclick="displayRandomImagePlus()">Change Faction</button>
         </div>
       </div>
     </div>
