--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>战雷随机分房生成器</title>
   <link rel="stylesheet" href="css/style.css" />
-  <style>
-    @font-face {
-      font-family: 'MyCustomFont';
-      src: url('fonts/MiSans-Normal.woff2') format('woff2');
-      font-weight: normal;
-      font-style: normal;
-      -webkit-font-smoothing: antialiased
-    }
-
-    body {
-      font-family: 'MyCustomFont';
-    }
-  </style>
 </head>
 
 <body>
@@ -99,6 +86,13 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="xwx">
+    <p>免责声明，本玩意仅供娱乐使用，对于您在抽选的分房内发生的包括但不限于：网络状况不佳，炮闩击发失败，被BVVD吞弹药，出核弹被人扫下来了，本网站概不负责！</p>
+    <p><a href="https://github.com/xiaotian7196/War-Thunder-Random-rating-picker/" target="_blank"
+        rel="noopener noreferrer">Github Page</a> | <a href="https://wt.xiaotianchen.com/index_en.html">English Page</a>
+    </p>本软件使用MiSans字体显示
+    <button class="iwi">×</button>
   </div>
   <script src="js/main.js"></script>
   <script src="js/random.js"></script>
